# orca_stagnator

./: .env.example  .gitignore  .vercel-trigger  AUTH_FIX_REPORT.md  BACKTESTING_GUIDE.md  BEST_TOKEN_SOLUTION.md  CANDLE_FETCHER_README.md  COMPLETION_REPORT.md  CRON_SOLUTION_SUMMARY.md  DAEMON_SETUP.md  DEPLOYMENT_COMPLETE_REPORT.md  DEPLOYMENT_GUIDE.md  DUPLICATE_FIX_GUIDE.md  DUPLICATE_FIX_GUIDE_UPDATED.md  Dockerfile  Dockerfile.trading  FASTEST_FIX_DUPLICATES.sql  FINAL_APPLICATION_REPORT.md  FINAL_CODE_VERIFICATION.md  FINAL_DEPLOYMENT_STATUS.md  FINAL_DEPLOYMENT_SUCCESS.md  FINAL_FIX_ALL_DUPLICATES.sql  FINAL_STATUS_REPORT.md  FIX_DUPLICATES_NOW.sql  FIX_DUPLICATES_SIMPLE.sql  GITHUB_PUSH_INSTRUCTIONS.md  MCP_QUICK_SETUP.md  MCP_TOKENS_STATUS.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PERFORMANCE_QUICK_SUMMARY.md  PRODUCTION_READY_FINAL_REPORT.md  QUICK_START_GUIDE.md  README.md  README_DEPLOYMENT.md  SETUP_COMPLETE_GUIDE.md  SUPABASE_SETUP_GUIDE.md  SUPABASE_TOKEN_MANAGER.md  TASK_COMPLETION_SUMMARY.md  TESTING_COMPLETE_SUMMARY.md  TESTSPRITE_FINAL_REPORT.md  (+74 more)
app/: main.py  orca_api.py  server.py
automated_trading/: first_hour_breakout_strategy.py  send_trading_signal.py
backtesting/: backtest_2025-10-08_ES.txt
data_upload/: api_server.py  upload_tick_data.py
docs/: QUICKSTART.md  SYSTEM_ARCHITECTURE.md
frontend/: .env.production  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.js
mcp/: MCP_INDEX.md  MCP_SERVERS_STATUS.md  POSTMAN_MCP_SETUP.md  README.md
price-service/: package.json  (+1 more)
(+254 files in other folders)
